# pico-ym2413-player

./: CMakeLists.txt
src/: main.c  ym2413_io.pio
